2014-04-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm (set_dashtype):  Fix potential buffer overrun;

	* src/misc.c (parse_dashtype):  A custom pattern must contain an even
	number of entries.

	* demo/dashtypes.dem demo/all.dem:  New dashtype demo.

	* src/qtterminal/QtGnuplotEvent.h src/qtterminal/QtGnuplotScene.cpp
	src/qtterminal/qt_term.cpp src/qtterminal/qt_term.h term/qt.trm:
	Support for custom dashtypes and dashlength in qt terminal.
	Change implementation of "lt nodraw" from background color to NoPen.

	* src/term.c (enhanced_recursion):  Consume only a single space following
	the font name in an enhanced text string "{/Fontname      text}".

	* docs/gnuplot.doc:  Initial documentation for `set dashtype` and
	dash properties in version 5.

2014-04-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (parse_dashtype) src/save.c (save_dashtype) src/term_api.h
	src/term.c (term_apply_lp_properties) demo/dashcolor.dem: 
	Fix some glitches found while testing custom dashtypes.

	* src/term.c (test_term): Exercise bold/italic.  Longer line samples to
	make it easier to distinguish dashtypes.  Minor layout changes.

	* term/svg.trm:  Support for custom dashtypes.

	* src/wxterminal/gp_cairo.* src/wxterminal/wxt_gui.*
	src/wxterminal/wxt_term.h term/cairo.trm term/wxt.trm:
	Support for custom dashtype in all cairo-based terminals.

2014-04-14  Dima Kogan  <dima@secretsauce.net>

	* src/mouse.c (event_buttonpress):  Flip direction of horizontal 
	scrolling to match the convention used by vertical scrolling.

2014-04-14  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in (AC_FUNC_FSEEKO) src/datafile.h: LFS support part 2.
	If possible, use fseeko/ftello to navigate input data files.

2014-04-13  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in (AC_CHECK_TYPES([off_t])) src/syscfg.h (#define off_t)
	src/binary.c src/datafile.c src/datafile.h:  Change the declared type