@@ -1,3 +1,8 @@
+2014-04-19  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/command.c (test_command):  When "test" is issued before any plot
+	command, suppress error messages if the window is resized.
+
 2014-04-18  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/svg.trm (set_dashtype):  Fix potential buffer overrun;
